Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -528,7 +528,7 @@
     "\n",
     "# Complete the line below so that the first loop variable is the called index,\n",
     "# and the second loop variable is the tuple (countryname, population). \n",
-    "for index, value in enumerate(grouped_df):\n",
+    "for index,  in enumerate(grouped_df):\n",
     "    \n",
     "    \n",
     "    # Get the unique subplot where the plot we're creating during this iteration\n",
