--- a/index.ipynb
+++ b/index.ipynb
@@ -541,7 +541,7 @@
     "    population.plot(x=v['year'], y=v['value'], ax=ax, legend=False)\n",
     "    \n",
     "    # Set the title of each plot, so we know which country it represents\n",
-    "    ax.set_title(None)\n"
+    "    ax.set_title(v[''])\n"
    ]
   },
   {
