Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -512,7 +512,7 @@
    "source": [
     "# Group the DataFrame by Country Name--this line has been provided for you\n",
     "grouped_df = df.groupby('country_name')\n",
-    "grouped_df.info()\n",
+    "\n",
     "# pass in figsize=(20,40), and also set the facecolor parameter to 'white'\n",
     "plt.figure(figsize=(20, 40), facecolor='white')\n",
     "\n",
@@ -532,6 +532,26 @@
     "    \n",
     "    # Set the title of each plot, so we know which country it represents\n",
     "    ax.set_title(v['country'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.groupby.DataFrameGroupBy object at 0x7f8212053ac8>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_df"
    ]
   },
   {
