--- a/index.ipynb
+++ b/index.ipynb
@@ -794,7 +794,7 @@
     "    \n",
     "    # Complete the line to create the plot for this subplot. \n",
     "    # Same visualizations as we created above!\n",
-    "    plt.plot(x=v['year'], y=v['value'], ax=ax, legend=False)\n",
+    "    plt.plot(x=v[1[, y=v['value'], ax=ax, legend=False)\n",
     "    \n",
     "    # Set the title of each plot, so we know which country it represents\n",
     "    ax.set_title(v['country_name'])\n"
