Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -492,71 +492,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     country_name country_code  year       value\n",
-      "2622  Afghanistan          AFG  1960   8996351.0\n",
-      "2623  Afghanistan          AFG  1961   9166764.0\n",
-      "2624  Afghanistan          AFG  1962   9345868.0\n",
-      "2625  Afghanistan          AFG  1963   9533954.0\n",
-      "2626  Afghanistan          AFG  1964   9731361.0\n",
-      "2627  Afghanistan          AFG  1965   9938414.0\n",
-      "2628  Afghanistan          AFG  1966  10152331.0\n",
-      "2629  Afghanistan          AFG  1967  10372630.0\n",
-      "2630  Afghanistan          AFG  1968  10604346.0\n",
-      "2631  Afghanistan          AFG  1969  10854428.0\n",
-      "2632  Afghanistan          AFG  1970  11126123.0\n",
-      "2633  Afghanistan          AFG  1971  11417825.0\n",
-      "2634  Afghanistan          AFG  1972  11721940.0\n",
-      "2635  Afghanistan          AFG  1973  12027822.0\n",
-      "2636  Afghanistan          AFG  1974  12321541.0\n",
-      "2637  Afghanistan          AFG  1975  12590286.0\n",
-      "2638  Afghanistan          AFG  1976  12840299.0\n",
-      "2639  Afghanistan          AFG  1977  13067538.0\n",
-      "2640  Afghanistan          AFG  1978  13237734.0\n",
-      "2641  Afghanistan          AFG  1979  13306695.0\n",
-      "2642  Afghanistan          AFG  1980  13248370.0\n",
-      "2643  Afghanistan          AFG  1981  13053954.0\n",
-      "2644  Afghanistan          AFG  1982  12749645.0\n",
-      "2645  Afghanistan          AFG  1983  12389269.0\n",
-      "2646  Afghanistan          AFG  1984  12047115.0\n",
-      "2647  Afghanistan          AFG  1985  11783050.0\n",
-      "2648  Afghanistan          AFG  1986  11601041.0\n",
-      "2649  Afghanistan          AFG  1987  11502761.0\n",
-      "2650  Afghanistan          AFG  1988  11540888.0\n",
-      "2651  Afghanistan          AFG  1989  11777609.0\n",
-      "2652  Afghanistan          AFG  1990  12249114.0\n",
-      "2653  Afghanistan          AFG  1991  12993657.0\n",
-      "2654  Afghanistan          AFG  1992  13981231.0\n",
-      "2655  Afghanistan          AFG  1993  15095099.0\n",
-      "2656  Afghanistan          AFG  1994  16172719.0\n",
-      "2657  Afghanistan          AFG  1995  17099541.0\n",
-      "2658  Afghanistan          AFG  1996  17822884.0\n",
-      "2659  Afghanistan          AFG  1997  18381605.0\n",
-      "2660  Afghanistan          AFG  1998  18863999.0\n",
-      "2661  Afghanistan          AFG  1999  19403676.0\n",
-      "2662  Afghanistan          AFG  2000  20093756.0\n",
-      "2663  Afghanistan          AFG  2001  20966463.0\n",
-      "2664  Afghanistan          AFG  2002  21979923.0\n",
-      "2665  Afghanistan          AFG  2003  23064851.0\n",
-      "2666  Afghanistan          AFG  2004  24118979.0\n",
-      "2667  Afghanistan          AFG  2005  25070798.0\n",
-      "2668  Afghanistan          AFG  2006  25893450.0\n",
-      "2669  Afghanistan          AFG  2007  26616792.0\n",
-      "2670  Afghanistan          AFG  2008  27294031.0\n",
-      "2671  Afghanistan          AFG  2009  28004331.0\n",
-      "2672  Afghanistan          AFG  2010  28803167.0\n",
-      "2673  Afghanistan          AFG  2011  29708599.0\n",
-      "2674  Afghanistan          AFG  2012  30696958.0\n",
-      "2675  Afghanistan          AFG  2013  31731688.0\n",
-      "2676  Afghanistan          AFG  2014  32758020.0\n",
-      "2677  Afghanistan          AFG  2015  33736494.0\n",
-      "2678  Afghanistan          AFG  2016  34656032.0\n"
+      "2622    Afghanistan\n",
+      "2623    Afghanistan\n",
+      "2624    Afghanistan\n",
+      "2625    Afghanistan\n",
+      "2626    Afghanistan\n",
+      "2627    Afghanistan\n",
+      "2628    Afghanistan\n",
+      "2629    Afghanistan\n",
+      "2630    Afghanistan\n",
+      "2631    Afghanistan\n",
+      "2632    Afghanistan\n",
+      "2633    Afghanistan\n",
+      "2634    Afghanistan\n",
+      "2635    Afghanistan\n",
+      "2636    Afghanistan\n",
+      "2637    Afghanistan\n",
+      "2638    Afghanistan\n",
+      "2639    Afghanistan\n",
+      "2640    Afghanistan\n",
+      "2641    Afghanistan\n",
+      "2642    Afghanistan\n",
+      "2643    Afghanistan\n",
+      "2644    Afghanistan\n",
+      "2645    Afghanistan\n",
+      "2646    Afghanistan\n",
+      "2647    Afghanistan\n",
+      "2648    Afghanistan\n",
+      "2649    Afghanistan\n",
+      "2650    Afghanistan\n",
+      "2651    Afghanistan\n",
+      "2652    Afghanistan\n",
+      "2653    Afghanistan\n",
+      "2654    Afghanistan\n",
+      "2655    Afghanistan\n",
+      "2656    Afghanistan\n",
+      "2657    Afghanistan\n",
+      "2658    Afghanistan\n",
+      "2659    Afghanistan\n",
+      "2660    Afghanistan\n",
+      "2661    Afghanistan\n",
+      "2662    Afghanistan\n",
+      "2663    Afghanistan\n",
+      "2664    Afghanistan\n",
+      "2665    Afghanistan\n",
+      "2666    Afghanistan\n",
+      "2667    Afghanistan\n",
+      "2668    Afghanistan\n",
+      "2669    Afghanistan\n",
+      "2670    Afghanistan\n",
+      "2671    Afghanistan\n",
+      "2672    Afghanistan\n",
+      "2673    Afghanistan\n",
+      "2674    Afghanistan\n",
+      "2675    Afghanistan\n",
+      "2676    Afghanistan\n",
+      "2677    Afghanistan\n",
+      "2678    Afghanistan\n",
+      "Name: country_name, dtype: object\n"
      ]
     },
     {
@@ -566,7 +566,7 @@
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-5b920dff64ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m# Complete the line to create the plot for this subplot.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# Same visualizations as we created above!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'value'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlegend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;31m# Set the title of each plot, so we know which country it represents\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-23-a93c0e21ea21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m# Complete the line to create the plot for this subplot.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# Same visualizations as we created above!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'value'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlegend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;31m# Set the title of each plot, so we know which country it represents\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: tuple indices must be integers or slices, not str"
      ]
     },
@@ -591,7 +591,7 @@
     "# Complete the line below so that the first loop variable is the called index,\n",
     "# and the second loop variable is the tuple (countryname, population). \n",
     "for i, v in enumerate(grouped_df):\n",
-    "    print(v[1].)\n",
+    "    print(v[1].country_name)\n",
     "\n",
     "    \n",
     "    # Get the unique subplot where the plot we're creating during this iteration\n",
