Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -492,82 +492,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2622    Afghanistan\n",
-      "2623    Afghanistan\n",
-      "2624    Afghanistan\n",
-      "2625    Afghanistan\n",
-      "2626    Afghanistan\n",
-      "2627    Afghanistan\n",
-      "2628    Afghanistan\n",
-      "2629    Afghanistan\n",
-      "2630    Afghanistan\n",
-      "2631    Afghanistan\n",
-      "2632    Afghanistan\n",
-      "2633    Afghanistan\n",
-      "2634    Afghanistan\n",
-      "2635    Afghanistan\n",
-      "2636    Afghanistan\n",
-      "2637    Afghanistan\n",
-      "2638    Afghanistan\n",
-      "2639    Afghanistan\n",
-      "2640    Afghanistan\n",
-      "2641    Afghanistan\n",
-      "2642    Afghanistan\n",
-      "2643    Afghanistan\n",
-      "2644    Afghanistan\n",
-      "2645    Afghanistan\n",
-      "2646    Afghanistan\n",
-      "2647    Afghanistan\n",
-      "2648    Afghanistan\n",
-      "2649    Afghanistan\n",
-      "2650    Afghanistan\n",
-      "2651    Afghanistan\n",
-      "2652    Afghanistan\n",
-      "2653    Afghanistan\n",
-      "2654    Afghanistan\n",
-      "2655    Afghanistan\n",
-      "2656    Afghanistan\n",
-      "2657    Afghanistan\n",
-      "2658    Afghanistan\n",
-      "2659    Afghanistan\n",
-      "2660    Afghanistan\n",
-      "2661    Afghanistan\n",
-      "2662    Afghanistan\n",
-      "2663    Afghanistan\n",
-      "2664    Afghanistan\n",
-      "2665    Afghanistan\n",
-      "2666    Afghanistan\n",
-      "2667    Afghanistan\n",
-      "2668    Afghanistan\n",
-      "2669    Afghanistan\n",
-      "2670    Afghanistan\n",
-      "2671    Afghanistan\n",
-      "2672    Afghanistan\n",
-      "2673    Afghanistan\n",
-      "2674    Afghanistan\n",
-      "2675    Afghanistan\n",
-      "2676    Afghanistan\n",
-      "2677    Afghanistan\n",
-      "2678    Afghanistan\n",
-      "Name: country_name, dtype: object\n"
-     ]
-    },
-    {
      "ename": "TypeError",
-     "evalue": "tuple indices must be integers or slices, not str",
+     "evalue": "inner() got multiple values for argument 'ax'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-a93c0e21ea21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m# Complete the line to create the plot for this subplot.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# Same visualizations as we created above!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'value'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlegend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;31m# Set the title of each plot, so we know which country it represents\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: tuple indices must be integers or slices, not str"
+      "\u001b[0;32m<ipython-input-24-a87d2309f3f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m# Complete the line to create the plot for this subplot.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m# Same visualizations as we created above!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlegend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;31m# Set the title of each plot, so we know which country it represents\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/matplotlib/pyplot.py\u001b[0m in \u001b[0;36mplot\u001b[0;34m(scalex, scaley, data, *args, **kwargs)\u001b[0m\n\u001b[1;32m   2811\u001b[0m     return gca().plot(\n\u001b[1;32m   2812\u001b[0m         *args, scalex=scalex, scaley=scaley, **({\"data\": data} if data\n\u001b[0;32m-> 2813\u001b[0;31m         is not None else {}), **kwargs)\n\u001b[0m\u001b[1;32m   2814\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2815\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: inner() got multiple values for argument 'ax'"
      ]
     },
     {
@@ -600,7 +537,7 @@
     "    \n",
     "    # Complete the line to create the plot for this subplot. \n",
     "    # Same visualizations as we created above!\n",
-    "    plt.plot(x=v[1], y=v[0], ax=ax, legend=False)\n",
+    "    plt.plot(x=v[1].year, y=v[0], ax=ax, legend=False)\n",
     "    \n",
     "    # Set the title of each plot, so we know which country it represents\n",
     "    ax.set_title(v[0])\n"
