Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -492,9 +492,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2622    1960\n",
+      "2623    1961\n",
+      "2624    1962\n",
+      "2625    1963\n",
+      "2626    1964\n",
+      "2627    1965\n",
+      "2628    1966\n",
+      "2629    1967\n",
+      "2630    1968\n",
+      "2631    1969\n",
+      "2632    1970\n",
+      "2633    1971\n",
+      "2634    1972\n",
+      "2635    1973\n",
+      "2636    1974\n",
+      "2637    1975\n",
+      "2638    1976\n",
+      "2639    1977\n",
+      "2640    1978\n",
+      "2641    1979\n",
+      "2642    1980\n",
+      "2643    1981\n",
+      "2644    1982\n",
+      "2645    1983\n",
+      "2646    1984\n",
+      "2647    1985\n",
+      "2648    1986\n",
+      "2649    1987\n",
+      "2650    1988\n",
+      "2651    1989\n",
+      "2652    1990\n",
+      "2653    1991\n",
+      "2654    1992\n",
+      "2655    1993\n",
+      "2656    1994\n",
+      "2657    1995\n",
+      "2658    1996\n",
+      "2659    1997\n",
+      "2660    1998\n",
+      "2661    1999\n",
+      "2662    2000\n",
+      "2663    2001\n",
+      "2664    2002\n",
+      "2665    2003\n",
+      "2666    2004\n",
+      "2667    2005\n",
+      "2668    2006\n",
+      "2669    2007\n",
+      "2670    2008\n",
+      "2671    2009\n",
+      "2672    2010\n",
+      "2673    2011\n",
+      "2674    2012\n",
+      "2675    2013\n",
+      "2676    2014\n",
+      "2677    2015\n",
+      "2678    2016\n",
+      "Name: year, dtype: int64\n"
+     ]
+    },
     {
      "ename": "TypeError",
      "evalue": "inner() got multiple values for argument 'ax'",
@@ -502,7 +566,7 @@
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-a87d2309f3f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m# Complete the line to create the plot for this subplot.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m# Same visualizations as we created above!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlegend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;31m# Set the title of each plot, so we know which country it represents\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-28-fb7a97118077>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m# Complete the line to create the plot for this subplot.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m# Same visualizations as we created above!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlegend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;31m# Set the title of each plot, so we know which country it represents\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/matplotlib/pyplot.py\u001b[0m in \u001b[0;36mplot\u001b[0;34m(scalex, scaley, data, *args, **kwargs)\u001b[0m\n\u001b[1;32m   2811\u001b[0m     return gca().plot(\n\u001b[1;32m   2812\u001b[0m         *args, scalex=scalex, scaley=scaley, **({\"data\": data} if data\n\u001b[0;32m-> 2813\u001b[0;31m         is not None else {}), **kwargs)\n\u001b[0m\u001b[1;32m   2814\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2815\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: inner() got multiple values for argument 'ax'"
      ]
@@ -528,7 +592,7 @@
     "# Complete the line below so that the first loop variable is the called index,\n",
     "# and the second loop variable is the tuple (countryname, population). \n",
     "for i, v in enumerate(grouped_df):\n",
-    "\n",
+    "    print(v[1].year)\n",
     "    \n",
     "    # Get the unique subplot where the plot we're creating during this iteration\n",
     "    # of the loop will live. Our subplot will be 30 rows of 9 plots each. \n",
