--- a/index.ipynb
+++ b/index.ipynb
@@ -601,7 +601,7 @@
     "    \n",
     "    # Complete the line to create the plot for this subplot. \n",
     "    # Same visualizations as we created above!\n",
-    "    plt.plot(x=v[1].year, y=v[0], ax=ax, legend=False)\n",
+    "    plt.plot(x=v[1].year, y=v[1].val, ax=ax, legend=False)\n",
     "    \n",
     "    # Set the title of each plot, so we know which country it represents\n",
     "    ax.set_title(v[0])\n"
