--- a/index.ipynb
+++ b/index.ipynb
@@ -536,10 +536,10 @@
     "    \n",
     "    # Complete the line to create the plot for this subplot. \n",
     "    # Same visualizations as we created above!\n",
-    "    plt.plot(x=v[1].year, y=v[1].value, ax=ax, legend=False)\n",
+    "    values.plt.plot(x=v[1].year, y=v[1].value, ax=ax, legend=False)\n",
     "    \n",
     "    # Set the title of each plot, so we know which country it represents\n",
-    "    ax.set_title(v[0])\n"
+    "    ax.set_title(name)\n"
    ]
   },
   {
