Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -516,7 +516,9 @@
     "    values.plot(x='year', y='value', ax=ax, legend=False)\n",
     "    \n",
     "    # Set the title of each plot, so we know which country it represents\n",
-    "    ax.set_title(name)\n"
+    "    ax.set_title(name)\n",
+    "\n",
+    "plt.subplots_adjust(wspace=1)"
    ]
   },
   {
