--- a/index.ipynb
+++ b/index.ipynb
@@ -518,7 +518,7 @@
     "    # Set the title of each plot, so we know which country it represents\n",
     "    ax.set_title(name)\n",
     "\n",
-    "plt.subplots_adjust(wspace=1)"
+    "plt.subplots_adjust(wspace=1, hspace=1)"
    ]
   },
   {
